:bug: Fixat horisonell scrollbar

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -4,9 +4,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  width: 100vw;
   min-height: 10vh;
   gap: 10%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  width: 100vw;
+  max-width: 100%;
   #categories {
     margin-left: 3%;
     font-size: 1.5rem;
