--- a/src/scss/productPage.scss
+++ b/src/scss/productPage.scss
@@ -7,7 +7,6 @@
     gap: 0.5rem;
     justify-content: space-between;
     background-color: v.$primary-color;
-    overflow: hidden;
 
     .product--container {
         width: 300px;
